--- a/style.css
+++ b/style.css
@@ -283,6 +283,12 @@ a:hover {
     padding-left: 0;
 }
 
+.img-responsive.portfolio-thumb {
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+}
+
 #bloc-1-hero h1 {
     font-size: 32px;
 }
@@ -677,7 +683,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 18px;
 }
 
 .tight-width-whitespace {
@@ -705,7 +711,7 @@ p {
 }
 
 h2 {
-    font-size: 22px;
+    font-size: 30px;
     line-height: 1.4em;
 }
 
@@ -753,7 +759,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(72, 57, 17, 0.8);
     padding: 40px 40px 40px 40px;
 }
 
@@ -775,7 +781,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #ff8300!important;
 }
 
 .btn-atomic-tangerine {
